--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:legacy": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start:legacy": "concurrently \"cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start\" \"npm run start-server\"",
+    "start-server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -51,6 +52,7 @@
     "typescript": "4.2.4"
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "gulp": "4.0.2",
