--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chartist": "0.10.1",
     "classnames": "2.3.1",
     "cors": "^2.8.5",
+    "express": "^5.1.0",
     "history": "5.0.0",
     "mysql2": "^3.14.1",
     "perfect-scrollbar": "1.5.1",
