--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:legacy": "concurrently \"cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start\" \"npm run start-server\"",
+    "start:legacy": "concurrently \"react-scripts start\" \"npm run start-server\"",
     "start-server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
