--- a/data.yaml
+++ b/data.yaml
@@ -3,7 +3,7 @@ val: ../valid/images
 test: ../test/images
 
 nc: 1
-names: ['bin_plate']
+names: ["bin_plate"]
 
 roboflow:
   workspace: binplate-train
