--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@material-ui/icons": "4.11.2",
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.9.0",
+    "body-parser": "^2.2.0",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "history": "5.0.0",
+    "multer": "^2.0.1",
+    "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "perfect-scrollbar": "1.5.1",
     "prop-types": "^15.7.2",
