--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "@react-google-maps/api": "^2.20.6",
