--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "4.11.2",
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
