--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chartist": "0.10.1",
     "classnames": "2.3.1",
     "cors": "^2.8.5",
+    "density-clustering": "^1.3.0",
     "express": "^5.1.0",
     "history": "5.0.0",
     "multer": "^2.0.1",
